Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8407 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2ba57f6ec8a5dcc4d2a709640896f96db91b5284

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ codename, mandatory for Debian based systems.
 of blocks from a config file.
 - Automatically run oscar-updater when installing a new version of the
 oscar-base packages.
+- Increase the timeout to 9s when getting repository information.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
