--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 6.0.3 (not yet released):
 - Update CentOS-5 support to CentOS-5.3.
-- Improve source code documentation.
+- Improve source code documentation and man pages.
 - [Ticket #477] Specify and implement the management of distribution's
 codename, mandatory for Debian based systems.
 - [Ticket #517] Correctly detect all Ubuntu distros.
