Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8417 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 385d39757119af4ba2300518494da10dae7d4be7

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@ of blocks from a config file.
 - Automatically run oscar-updater when installing a new version of the
 oscar-base packages.
 - Increase the timeout to 9s when getting repository information.
+- [Ticket #398] We can now check whether the binary packages specified for the
+creation of a image are actually available or not. For that, one just needs to
+use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
