Clean-up the prereq management and the bootstrapping mechanisms.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8419 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 33b5f41382894776e4d54974837c0f96f0895328

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ oscar-base packages.
 - [Ticket #398] We can now check whether the binary packages specified for the
 creation of a image are actually available or not. For that, one just needs to
 use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
+- Clean-up the prereq management and the bootstrapping mechanisms.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
