--- a/ChangeLog
+++ b/ChangeLog
@@ -21,8 +21,9 @@ use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
 - Update Selector to 1.2.1.
 - Update Yume to 2.8.9.
 - Update RAPT to 2.8.5.
-- Update ODA to 1.4.4.
+- Update ODA to 1.4.5.
 - Update ORM to 1.3.
+- Update the Configurator 1.0.2.
 - Include an OSCAR Package for the Berkeley Lab Checkpoint/Restart (BLCR).
 
 6.0.2:
