--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.3-1) jaunty; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Tue, 26 May 2009 15:50:52 -0400
+
 oscar (6.0.2-1) intrepid; urgency=low
 
   * New upstream version.
