--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+6.0.4 (not yet released):
+- Update ORM to 1.4.
+
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
 - Improve source code documentation and man pages.
