Update the changelog file.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8551 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d6c83c131798fbc0dd0941f69388cbb53fa4d0eb

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 6.0.4 (not yet released):
 - Update ORM to 1.4.
+- Fix the PATH environment variable is updated.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
