Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8553 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 27067f54488d3a3b3ef2bdf164c38d0459303c3f

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 6.0.4 (not yet released):
 - Update ORM to 1.4.
 - Fix the PATH environment variable is updated.
+- [Ticket #546] Configuration files in /tftpboot are updated when updated
+OSCAR.
+- [Ticket #532] Implement a cache when detecting the format of repositories.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
