Include the support for ubuntu-904-x86_64.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8573 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 38097e2d982a2ce94f2c1687cf3639e65edd8dc4

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 - [Ticket #546] Configuration files in /tftpboot are updated when updated
 OSCAR.
 - [Ticket #532] Implement a cache when detecting the format of repositories.
+- Add Ubuntu-904-x84_64 in the list of supported distributions (still
+experimental).
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
