--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,26 @@
 6.0.4 (not yet released):
+- Update OPKGC to 0.4.2.
 - Update ORM to 1.4.
+- Update Opium to 1.3.1.
+- Update RAPT to 2.8.6.
+- Update SystemInstaller to 2.4.2.
+- Update Yume to 2.8.10.
 - Fix the PATH environment variable is updated.
-- [Ticket #546] Configuration files in /tftpboot are updated when updated
+- [Ticket #134] Make sure that /proc is umounted at the end of the creation of
+an image.
+- [Ticket #314] Fix the hard drive type detection (SCSI vs. IDE) when using the
+CLI.
+- [Ticket #364] Include the support of Ganglia on Debian based systems
+(Experimental package set).
+- [Ticket #380] Include the support of Torque on Debian based systems
+(Experimental package set).
+- [Ticket #466] The oscar script supports short options.
 OSCAR.
-- [Ticket #532] Implement a cache when detecting the format of repositories.
 - Add Ubuntu-904-x84_64 in the list of supported distributions (still
 experimental).
 - Convert the ssh_install script to Perl so it is easier to maintain (some
 had weird errors in the past; running the script twice was the only solution).
+- Fix the configurator_cli script when using the different new APIs.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
