This check-in fixes #551 - The initrd for images based on latest RPM based distros is now correctly generated.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8616 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 012cb4a8b3d5217223492d3f035e14850d7dd17e

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - Update ORM to 1.4.
 - Update Opium to 1.3.1.
 - Update RAPT to 2.8.6.
+- Update sync-files to 2.4.1.
 - Update SystemInstaller to 2.4.2.
 - Update Yume to 2.8.10.
 - Fix the PATH environment variable update.
@@ -16,6 +17,7 @@ CLI.
 (Experimental package set).
 - [Ticket #466] The oscar script supports short options.
 OSCAR.
+- [Ticket #551] A correct initrd is generated for latest RPM based distros.
 - Add Ubuntu-904-x84_64 in the list of supported distributions (still
 experimental).
 - Convert the ssh_install script to Perl so it is easier to maintain (some
