Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8627 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: c13617bf0b3e10eb1e35029ccf33e7188e54385a

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@ experimental).
 had weird errors in the past; running the script twice was the only solution).
 - Fix the configurator_cli script when using the different new APIs.
 - Make sure we install mysql-5.0 on Debian lenny and not mysql-4.1.
+- Fix and improve the SIS api-post-image script.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
