--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,9 @@ had weird errors in the past; running the script twice was the only solution).
 - Fix the configurator_cli script when using the different new APIs.
 - Make sure we install mysql-5.0 on Debian lenny and not mysql-4.1.
 - Fix and improve the SIS api-post-image script.
+- Improve the spec file to have a finer grain dependencies management.
+- Fix the script that gets the number of procs on compute nodes (patch from
+Thilo).
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
