Fix the path to netbootmgr in oscar_wizard (patch from Thilo).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8677 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ca7afa500530c09d5f428a5e462e4b074cfccb2b

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@ had weird errors in the past; running the script twice was the only solution).
 - Improve the spec file to have a finer grain dependencies management.
 - Fix the script that gets the number of procs on compute nodes (patch from
 Thilo).
+- Fix the path to netbootmgr in oscar_wizard.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
