--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 6.0.4 (not yet released):
+- Update OPKG NTPCONFIG to 1.32.2.
+- Update OPKG ODA to 1.32.2.
+- Update OPKG SIS to 4.0.4.
+- Update OPKG Switcher to 1.0.11.
 - Update OPKGC to 0.4.2.
 - Update ORM to 1.4.
 - Update Opium to 1.3.1.
@@ -28,7 +32,12 @@ had weird errors in the past; running the script twice was the only solution).
 - Improve the spec file to have a finer grain dependencies management.
 - Fix the script that gets the number of procs on compute nodes (patch from
 Thilo).
-- Fix the path to netbootmgr in oscar_wizard.
+- Fix the path to netbootmgr in oscar_wizard (patch from Thilo).
+- Update of the yum sanity check script: the gpgcheck option can now be
+handed either in the config file specific to the OSCAR repo or the main yum
+config file.
+- Update the list of packages for debian-5-i386 (patch from Paul Kilgo).
+- Finalize the start_over capability.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
