--- a/ChangeLog
+++ b/ChangeLog
@@ -4,9 +4,11 @@
 - Update OPKG SIS to 4.0.4.
 - Update OPKG Switcher to 1.0.11.
 - Update OPKGC to 0.4.2.
-- Update ORM to 1.4.
+- Update ORM to 1.4.0.
 - Update Opium to 1.3.1.
+- Update PackMan to 3.1.11.
 - Update RAPT to 2.8.6.
+- Update Selector to 1.2.2.
 - Update sync-files to 2.5.0.
 - Update SystemInstaller to 2.4.2.
 - Update Yume to 2.8.10.
