--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,8 @@ config file.
 - Update the list of packages for debian-5-i386 (patch from Paul Kilgo).
 - Finalize the start_over capability.
 - Fix a bug in the management of configuration file when no block is used.
+- Add a script to oscar-updater so we make sure a DB_TYPE variable is in the
+oscar configuration file.
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
