Update the ssh_user_tests to make more generic (patch from Thilo).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8698 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4eff5a2bd79ae34d4bad14220abc9f70ecdcbf55

--- a/ChangeLog
+++ b/ChangeLog
@@ -43,6 +43,7 @@ config file.
 - Fix a bug in the management of configuration file when no block is used.
 - Add a script to oscar-updater so we make sure a DB_TYPE variable is in the
 oscar configuration file.
+- Update the ssh_user_tests to make more generic (patch from Thilo).
 
 6.0.3:
 - Update CentOS-5 support to CentOS-5.3.
