Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8716 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: cb27c3fecff54014fc4be17c03e4347116e26f64

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,8 @@ CLI.
 - [Ticket #466] The oscar script supports short options.
 OSCAR.
 - [Ticket #551] A correct initrd is generated for latest RPM based distros.
+- [Ticket #555] Fix the missing Tk dependencies for the Torque Debian package
+(for the GUI package).
 - [Ticket #558] Since switcher is now functional, it is now possible to
 specify kernel boot parameters.
 - Add Ubuntu-904-x84_64 in the list of supported distributions (still
