--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@ OSCAR.
 - [Ticket #551] A correct initrd is generated for latest RPM based distros.
 - [Ticket #555] Fix the missing Tk dependencies for the Torque Debian package
 (for the GUI package).
+- [Ticket #556] Torque is now correctly setup on Debian based systems.
 - [Ticket #558] Since switcher is now functional, it is now possible to
 specify kernel boot parameters.
 - Add Ubuntu-904-x84_64 in the list of supported distributions (still
