Continue to prepare the 6.0.4 release.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8767 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4f84d809fe86fb100bbc30d9132a6c2025d1807e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.4-1) hardy; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Fri, 25 Sep 2009 23:41:48 -0400
+
 oscar (6.0.3-1) jaunty; urgency=low
 
   * New upstream version.
