--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
-6.0.4 (not yet released):
+6.0.4:
+- Update Configurator to 1.0.3.
+- Update ODA to 1.4.6.
+- Update OPKG JobMonarch to 0.1.3.
 - Update OPKG NTPCONFIG to 1.32.2.
 - Update OPKG ODA to 1.32.2.
+- Update OPKG SGE to 6.1.0.
 - Update OPKG SIS to 4.0.5.
 - Update OPKG Switcher to 1.0.11.
 - Update OPKG Torque to 2.1.13.
 - Update OPKGC to 0.4.2.
-- Update ODA to 1.4.6.
-- Update ORM to 1.4.0.
+- Update ORM to 1.4.1.
 - Update Opium to 1.3.1.
 - Update PackMan to 3.1.11.
 - Update RAPT to 2.8.6.
-- Update Selector to 1.2.3.
-- Update sync-files to 2.5.0.
+- Update Selector to 1.2.4.
+- Update sync-files to 2.5.2.
 - Update SystemInstaller to 2.4.4.
 - Update Yume to 2.8.10.
 - Fix the PATH environment variable update.
