--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+6.0.5 (not yet released):
+- [Ticket #405] When post image creation scripts fail, the image is deleted.
+- [Ticket #520] Ganglia configuration scripts do not generate any error
+anymore.
+
 6.0.4:
 - Update Configurator to 1.0.3.
 - Update ODA to 1.4.6.
