This check-in fixes #542 - Include the documentation into the OSCAR binary packages.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8772 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7947a40c72206322527ed6712a3936cdb3c58b69

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - [Ticket #405] When post image creation scripts fail, the image is deleted.
 - [Ticket #520] Ganglia configuration scripts do not generate any error
 anymore.
+- [Ticket #542] Include the documentation into the OSCAR binary packages.
 
 6.0.4:
 - Update Configurator to 1.0.3.
