--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 6.0.5 (not yet released):
+- [Ticket #326] Remove the documentation OPKG since the documentation is
+managed via the Trac wiki and the PDFs included into the OSCAR binary
+packages.
 - [Ticket #405] When post image creation scripts fail, the image is deleted.
 - [Ticket #520] Ganglia configuration scripts do not generate any error
 anymore.
