This check-in fixes #563 - Includes cron in the list of package for Debian based images.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8778 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 00013154bc1c99cf698401ba4481567763705274

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ packages.
 - [Ticket #520] Ganglia configuration scripts do not generate any error
 anymore.
 - [Ticket #542] Include the documentation into the OSCAR binary packages.
+- [Ticket #562] Include cron in the list of package for Debian based images.
 - [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
 
 6.0.4:
