--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.5 (not yet released):
+- Update OPKG Netbootmgr to 1.7.1.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
 managed via the Trac wiki and the PDFs included into the OSCAR binary
 packages.
