This check-in fixes #570 - Correctly generate ssh keys on the headnode.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8783 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 8cde7b49dd66eb92bf1858c3df15659992c1d140

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ anymore.
 - [Ticket #542] Include the documentation into the OSCAR binary packages.
 - [Ticket #562] Include cron in the list of package for Debian based images.
 - [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
+- [Ticket #570] Correctly generate ssh keys on the headnode.
 
 6.0.4:
 - Update Configurator to 1.0.3.
