Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8834 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d255143ab263a4b577e80fbfc2c06326e838d55a

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 6.0.5 (not yet released):
 - Update OPKG Netbootmgr to 1.7.1.
+- Update OPKG SIS to 4.0.6.
+- Update ODA to 1.4.7.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
 managed via the Trac wiki and the PDFs included into the OSCAR binary
 packages.
