Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8852 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0d5adcf35ceae8b5de3de1d35fa75c079d8766aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - Update OPKG Netbootmgr to 1.7.1.
 - Update OPKG SIS to 4.0.6.
 - Update ODA to 1.4.7.
+- Update sync_files to 2.5.4.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
 managed via the Trac wiki and the PDFs included into the OSCAR binary
 packages.
