Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8859 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 13f21f984c7c5074f649bbbc8728361281f72da2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 6.0.5 (not yet released):
 - Update OPKG C3 to 4.1.4.
+- Update OPKG Ganglia to 3.0.7.
 - Update OPKG Netbootmgr to 1.7.1.
 - Update OPKG SIS to 4.0.6.
 - Update ODA to 1.4.7.
