Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8864 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f78dc153ea967a22ef5aced4c9b0d934aa344f9a

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@ anymore.
 - [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
 - [Ticket #564] The correct C3 packages are now installed on compute nodes.
 - [Ticket #570] Correctly generate ssh keys on the headnode.
+- Fix issues during the generation of the ssh keys.
 
 6.0.4:
 - Update Configurator to 1.0.3.
