--- a/ChangeLog
+++ b/ChangeLog
@@ -16,7 +16,7 @@ anymore.
 - [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
 - [Ticket #564] The correct C3 packages are now installed on compute nodes.
 - [Ticket #570] Correctly generate ssh keys on the headnode.
-- Fix issues during the generation of the ssh keys.
+- Fix issues during the generation of the ssh keys (ssh_install).
 
 6.0.4:
 - Update Configurator to 1.0.3.
