Remove various code compilation warnings when executing OSCAR base Perl modules.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8868 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d05dca48fff8b6012e7ff47e833100853c36569c

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@ anymore.
 - [Ticket #564] The correct C3 packages are now installed on compute nodes.
 - [Ticket #570] Correctly generate ssh keys on the headnode.
 - Fix issues during the generation of the ssh keys (ssh_install).
+- Remove various code compilation warnings when executing OSCAR base Perl
+modules.
 
 6.0.4:
 - Update Configurator to 1.0.3.
