--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - Update OPKG Ganglia to 3.0.7.
 - Update OPKG Netbootmgr to 1.7.1.
 - Update OPKG SIS to 4.0.6.
+- Update OPKG Switcher to 1.0.12.
 - Update ODA to 1.4.7.
 - Update sync_files to 2.5.5.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
