This check-in fixes #574 - We can now specify multiple default distro repositories. For that, we changed the syntax of the "supported_distros.txt" configuration file.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8933 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fa595f6a9cd4e744938c64dbf4225edd15814ae3

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ anymore.
 - Remove various code compilation warnings when executing OSCAR base Perl
 modules.
 - Fix issues when generating the initrd on RPM based systems.
+- Support the specification of multiple Linux distribution online repositories.
 
 6.0.4:
 - Update Configurator to 1.0.3.
