Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8935 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f684ea7832354547742484fcb15caa2a190d9b08

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,11 +17,12 @@ anymore.
 - [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
 - [Ticket #564] The correct C3 packages are now installed on compute nodes.
 - [Ticket #570] Correctly generate ssh keys on the headnode.
+- [Ticket #574] Support the specification of multiple Linux distribution online
+repositories.
 - Fix issues during the generation of the ssh keys (ssh_install).
 - Remove various code compilation warnings when executing OSCAR base Perl
 modules.
 - Fix issues when generating the initrd on RPM based systems.
-- Support the specification of multiple Linux distribution online repositories.
 
 6.0.4:
 - Update Configurator to 1.0.3.
