More asserts when checking binary packages available from a package list file.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8951 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d24efa4c4bea168189bf002f1b5b9ed97a57eb53

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@ repositories.
 - Remove various code compilation warnings when executing OSCAR base Perl
 modules.
 - Fix issues when generating the initrd on RPM based systems.
+- More asserts when checking binary packages available from a package list 
+file.
 
 6.0.4:
 - Update Configurator to 1.0.3.
