--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,10 @@
 - Update OPKG Netbootmgr to 1.7.1.
 - Update OPKG SIS to 4.0.6.
 - Update OPKG Switcher to 1.0.12.
-- Update ODA to 1.4.7.
+- Update ODA to 1.4.8.
+- Update RAPT to 2.8.7.
 - Update sync_files to 2.5.5.
+- Update SystemInstaller to 2.4.5.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
 managed via the Trac wiki and the PDFs included into the OSCAR binary
 packages.
