Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8961 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 339916f04074ed3270ad58dbf8b45a03c885fd25

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,9 @@ modules.
 - Fix issues when generating the initrd on RPM based systems.
 - More asserts when checking binary packages available from a package list 
 file.
+- Simplify and fix the way to check if the packages in a binary packages list
+from a file are available or not.
+- Update the list of RPMs for a basic image based on RHEL5/CentOS5.
 
 6.0.4:
 - Update Configurator to 1.0.3.
