Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8962 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9a9974cebf39704b5c2b3c9b7996d5c9c32eac6a

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 - Update RAPT to 2.8.7.
 - Update sync_files to 2.5.5.
 - Update SystemInstaller to 2.4.5.
+- Update Yume to 2.8.11.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
 managed via the Trac wiki and the PDFs included into the OSCAR binary
 packages.
