Correctly set the OSCAR_UI environment variable when running oscar_wizard.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8976 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d6fd35d39cfd2129760906c213608250d2e0b3d8

--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@ file.
 from a file are available or not.
 - Update the list of RPMs for a basic image based on RHEL5/CentOS5.
 - Update CentOS-5 support to CentOS-5.4.
+- Correctly set the OSCAR_UI environment variable when running oscar_wizard.
 
 6.0.4:
 - Update Configurator to 1.0.3.
