[jobmonarch] Fix a problem with server-post-install when detecting the compat distro (did not rely on OS_Detect).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@8981 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ca3ebd0d948a0a6adc842b511b31002d5fb1e42b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 6.0.5 (not yet released):
 - Update OPKG C3 to 4.1.4.
 - Update OPKG Ganglia to 3.0.8.
+- Update OPKG JobMonarch to 0.1.4.
 - Update OPKG Netbootmgr to 1.7.1.
+- Update OPKG SGE to 6.1.1.
 - Update OPKG SIS to 4.0.6.
 - Update OPKG Switcher to 1.0.12.
 - Update ODA to 1.4.8.
