--- a/ChangeLog
+++ b/ChangeLog
@@ -37,7 +37,7 @@ from a file are available or not.
 - Update the list of RPMs for a basic image based on RHEL5/CentOS5.
 - Update CentOS-5 support to CentOS-5.4.
 - Correctly set the OSCAR_UI environment variable when running oscar_wizard.
-- Fix the prereqs regarding Scientific Linux configuration.
+- Fix Scientific Linux configuration issues.
 
 6.0.4:
 - Update Configurator to 1.0.3.
