--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 - Update OPKG C3 to 4.1.4.
 - Update OPKG Ganglia to 3.0.8.
 - Update OPKG JobMonarch to 0.1.4.
-- Update OPKG Netbootmgr to 1.7.2.
-- Update OPKG SGE to 6.1.1.
+- Update OPKG Netbootmgr to 1.7.3.
+- Update OPKG SGE to 6.1.3.
 - Update OPKG SIS to 4.0.6.
 - Update OPKG Switcher to 1.0.12.
 - Update ODA to 1.4.9.
@@ -38,6 +38,7 @@ from a file are available or not.
 - Update CentOS-5 support to CentOS-5.4.
 - Correctly set the OSCAR_UI environment variable when running oscar_wizard.
 - Fix Scientific Linux configuration issues.
+- Improve the oscar_image_cleanup script.
 
 6.0.4:
 - Update Configurator to 1.0.3.
