--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 6.0.5 (not yet released):
+- Update Configurator to 1.0.4.
 - Update OPKG C3 to 4.1.4.
 - Update OPKG Ganglia to 3.0.8.
 - Update OPKG JobMonarch to 0.1.4.
@@ -6,11 +7,12 @@
 - Update OPKG SGE to 6.1.3.
 - Update OPKG SIS to 4.0.6.
 - Update OPKG Switcher to 1.0.12.
-- Update ODA to 1.4.9.
+- Update ODA to 1.4.10.
 - Update ORM to 1.4.2.
 - Update RAPT to 2.8.7.
+- Update Selector to 1.2.5.
 - Update sync_files to 2.5.5.
-- Update SystemInstaller to 2.4.5.
+- Update SystemInstaller to 2.4.7.
 - Update Yume to 2.8.11.
 - [Ticket #326] Remove the documentation OPKG since the documentation is
 managed via the Trac wiki and the PDFs included into the OSCAR binary
