--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Update OPKG Ganglia to 3.0.8.
 - Update OPKG JobMonarch to 0.1.4.
 - Update OPKG Netbootmgr to 1.7.3.
+- Update OPKG pfilter to 1.707.1.
 - Update OPKG SGE to 6.1.3.
 - Update OPKG SIS to 4.0.6.
 - Update OPKG Switcher to 1.0.12.
