Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9112 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 91477f7dda8b78a83a249f9aae4ef5224fa6e3f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,7 @@ from a file are available or not.
 - Add the support of CCISS controllers.
 - Install the API side of OPKGs at the beginning of the OPKG configuration 
 phase.
+- Make sure the ssh configuration for root is valid.
 
 6.0.4:
 - Update Configurator to 1.0.3.
