--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,7 @@ phase.
 - Make sure the ssh configuration for root is valid.
 - Fix the confusion between db_type and oda_type when getting data from the
 OSCAR configuration file (reported by Olivier Lahaye).
+- Make sure we populate ODA with the fully qualified hostname.
 
 6.0.4:
 - Update Configurator to 1.0.3.
