--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,10 @@
 - Update OPKG C3 to 4.1.4.
 - Update OPKG Ganglia to 3.0.9.
 - Update OPKG JobMonarch to 0.1.4.
+- Update OPKG mta-config to 1.1.1.
 - Update OPKG Netbootmgr to 1.7.3.
 - Update OPKG pfilter to 1.707.1.
-- Update OPKG SGE to 6.1.3.
+- Update OPKG SGE to 6.1.4.
 - Update OPKG SIS to 4.0.6.
 - Update OPKG Switcher to 1.0.12.
 - Update ODA to 1.4.11.
