Update the ChanegLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9167 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3210078b654f52ed0ebb7608a154923a3a587427

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,8 @@ repositories.
 over.
 - [Ticket #582] After starting over and a new bootstrap, the database has now
 data about the headnode NIC.
+- [Ticket #587] Several issues in the SSH configuration has been fixed, the
+display forwarding is now activated.
 - Fix issues during the generation of the ssh keys (ssh_install).
 - Remove various code compilation warnings when executing OSCAR base Perl
 modules.
