Update the debian changelog for 6.0.5.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9173 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 467fe000b8b4c60afcd19798cc2b72202bb1bc3e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.5-1) karmic; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Mon, 04 Jan 2010 17:40:37 -0500
+
 oscar (6.0.4-1) hardy; urgency=low
 
   * New upstream version.
