--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 6.0.6 (not yet released):
 - Update OPKG OpenMPI to 1.3.0.
 - [Ticket #586] Fix problem when using ssh -v to connect to clients.
+- [Ticket #591] Add a dependency to syslinux to the oscar-base-scripts RPM. 
 
 6.0.5:
 - Update Configurator to 1.0.5.
