Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9258 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 63947e0d6cdb95140ceb9ed36c6083423bf51e43

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ using the CLI.
 - [Ticket #583] Remove hosts from SSH known_hosts when deleting clients.
 - [Ticket #586] Fix problem when using ssh -v to connect to clients.
 - [Ticket #591] Add a dependency to syslinux to the oscar-base-scripts RPM. 
+- Fix issues when detecting the OSCAR version.
+- Add the support of ubuntu-1004-x86_64.
 
 6.0.5:
 - Update Configurator to 1.0.5.
