--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-6.0.6 (not yet released):
+6.0.6:
+- Update ODA to 1.4.14.
 - Update OPKG OpenMPI to 1.3.0.
+- Update RAPT to 2.8.8.
 - [Ticket #549] Create the .master script for SystemImager for images created
 using the CLI.
 - [Ticket #583] Remove hosts from SSH known_hosts when deleting clients.
