Continue to fix things for 6.0.6.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9274 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 1e4dc62c0ab551bceddeb6a933851d48dd159b91

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.0.6-1) lucid; urgency=low
+
+  * New upstream version. 
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Sat, 21 Aug 2010 17:57:54 -0400
+
 oscar (6.0.5-1) karmic; urgency=low
 
   * New upstream version.
