--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+6.0.7 (not yet released):
+- [Ticket #525] Improve the management of /etc/hosts on the headnode.
+
 6.0.6:
 - Update ODA to 1.4.14.
 - Update OPKG OpenMPI to 1.3.0.
