This check-in fixes #451 - Clean-up the /etc/systemimager/flamethrower.conf configuration file when a failure occurs during the image creation.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9298 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 533fc6657fc7db2d9ffbf4ba40f1585cf14c6e55

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 - Update PackMan to 3.2.0.
 - Update Selector to 1.2.6.
 - Update SystemInstaller to 2.4.11.
+- [Ticket #451] Clean-up the /etc/systemimager/flamethrower.conf configuration 
+file when a failure occurs during the image creation.
 - [Ticket #525] Improve the management of /etc/hosts on the headnode.
 - [Ticket #597] Bootstrapping now updates OPKGs data rather than duplicating
 the data for all OPKGs.
