This check-in fixes #526 - Improve system sanity when deleting clients: DHCP is now correctly handled.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9299 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b5a3a3a4af6c3a59e6789bca188b7ff08fac43ef

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 - [Ticket #451] Clean-up the /etc/systemimager/flamethrower.conf configuration 
 file when a failure occurs during the image creation.
 - [Ticket #525] Improve the management of /etc/hosts on the headnode.
+- [Ticket #526] Improve system sanity when deleting clients: DHCP is now
+correctly handled. 
 - [Ticket #597] Bootstrapping now updates OPKGs data rather than duplicating
 the data for all OPKGs.
 - Fix the definition of base prereqs for Debian-based systems.
