This check-in fixes #516 - Make sure the systemimager-server-monitord service starts correctly.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9301 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7380becb055e5738bc43a438a82d1422ed3740c1

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Update SystemInstaller to 2.4.11.
 - [Ticket #451] Clean-up the /etc/systemimager/flamethrower.conf configuration 
 file when a failure occurs during the image creation.
+- [Ticket #516] Make sure the systemimager-server-monitord service starts correctly.
 - [Ticket #525] Improve the management of /etc/hosts on the headnode.
 - [Ticket #526] Improve system sanity when deleting clients: DHCP is now
 correctly handled. 
