--- a/ChangeLog
+++ b/ChangeLog
@@ -3,9 +3,12 @@
 - Update PackMan to 3.2.0.
 - Update Selector to 1.2.6.
 - Update SystemInstaller to 2.4.11.
+- [Ticket #143] Node are correctly sorted when generating the C3 configuration
+file.
 - [Ticket #451] Clean-up the /etc/systemimager/flamethrower.conf configuration 
 file when a failure occurs during the image creation.
-- [Ticket #516] Make sure the systemimager-server-monitord service starts correctly.
+- [Ticket #516] Make sure the systemimager-server-monitord service starts
+correctly.
 - [Ticket #525] Improve the management of /etc/hosts on the headnode.
 - [Ticket #526] Improve system sanity when deleting clients: DHCP is now
 correctly handled. 
