Update the ChangeLog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9310 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9b1a4d5bc3b3e5b6e4281f30c03b465915f52dc2

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Update ODA to 1.4.15.
 - Update PackMan to 3.2.0.
 - Update Selector to 1.2.6.
+- Update sync_file to 2.5.8.
 - Update SystemInstaller to 2.4.11.
 - [Ticket #143] Node are correctly sorted when generating the C3 configuration
 file.
