--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 6.0.7 (not yet released):
 - Update ODA to 1.4.15.
+- Update OPKGC to 0.5.0.
 - Update PackMan to 3.2.0.
 - Update Selector to 1.2.6.
 - Update sync_file to 2.5.8.
