Update the Debian changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9342 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e17b2783201678c079cde48c31f71cedadcf1524

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.1.0-1) lucid; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Tue, 08 Feb 2011 15:16:29 -0500
+
 oscar (6.0.6-1) lucid; urgency=low
 
   * New upstream version. 
