--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+6.1.1 (not yet released):
+- Using a generic URL for CentOS repository (to automatically use updates), and add the updates.
+
 6.1.0:
 - Update C3 to 5.1.0.
 - Update ODA to 1.4.15.
