[Ganglia] Fix issues in the user_test script (patch from Ivan V. Sergeyev).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9352 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: cf04afeded7ab542d63ad8381a7f36cf3bf4c544

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 6.1.1 (not yet released):
+- Update OPKG Ganglia to 3.0.12.
+- Update OPKG Torque to 2.1.14.
 - Using a generic URL for CentOS repository (to automatically use updates), and add the updates.
 
 6.1.0:
