Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9353 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7c04998049b7745ddccddb46f85367213ce0e7c3

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Update OPKG Ganglia to 3.0.12.
 - Update OPKG Torque to 2.1.14.
 - Using a generic URL for CentOS repository (to automatically use updates), and add the updates.
+- Fix the documentation (Ubuntu x86_64 is supported and not x86).
 
 6.1.0:
 - Update C3 to 5.1.0.
