Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9368 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: dae199f77e945a2323eba0892ab1c4f909dd6c9a

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Using a generic URL for CentOS repository (to automatically use updates), and add the updates.
 - Fix the documentation (Ubuntu x86_64 is supported and not x86).
 - Fix the entry for Ubuntu 10.04 in supported_distros.txt
+- Fix a base prereq (mysql-server) for Debian 5.
 
 6.1.0:
 - Update C3 to 5.1.0.
