Update the list of base prereqs for RHEL 5 systems.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9370 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9854c90ed3e18857875bcc1f1fb2839b22daa5ef

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 - Fix the documentation (Ubuntu x86_64 is supported and not x86).
 - Fix the entry for Ubuntu 10.04 in supported_distros.txt
 - Fix a base prereq (mysql-server) for Debian 5.
+- fix the list of base prereqs for RHEL 5 systems.
 
 6.1.0:
 - Update C3 to 5.1.0.
