This check-in fixes #601 - We do not need to specify the version of mysql-server in the base prereqs on Debian, the meta-package provided by the distro seems to be fixed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9390 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a5155d3eb7d806ee1cff6dab506efc2acb54bc20

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 6.1.1 (not yet released):
 - Update to C3 5.2.1.
+- Update OPKG C3 to 4.1.5.
 - Update OPKG Ganglia to 3.0.13.
 - Update OPKG Torque to 2.1.14.
 - Update sync_files to 2.5.9.
@@ -9,6 +10,8 @@
 - Fix the entry for Ubuntu 10.04 in supported_distros.txt
 - Fix a base prereq (mysql-server) for Debian 5.
 - Fix the list of base prereqs for RHEL 5 systems.
+- [Ticket #601] On Debian systems, we can now use mysql-server without 
+specifying any version for the base prereqs.
 
 6.1.0:
 - Update C3 to 5.1.0.
