Add a package for development (oscar-devel on RPM based systems and oscar-dev on Debian based systems). + Clean-up a little the Debian package.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9402 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 986986eda134bacbf695465308428df528c7859d

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ add the updates.
 - [Ticket #601] On Debian systems, we can now use mysql-server without 
 specifying any version for the base prereqs.
 - [Ticket #600] Fix a dependency issue with the LAM OPKG on RPM based systems.
+- Add a oscar-devel package.
 
 6.1.0:
 - Update C3 to 5.1.0.
