--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.1.1-1) lucid; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 26 May 2011 09:11:29 -0400
+
 oscar (6.1.0-1) lucid; urgency=low
 
   * New upstream version.
