Update the Debian changelog to be able to generate the beta packages.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9483 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 54ea05ce9a01501cd6dd2f890f2ca832072edea5

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-oscar (6.1.1-1) lucid; urgency=low
+oscar (6.1.1~svn20120930-0gv1) precise; urgency=low
 
   * New upstream version.
 
- -- Geoffroy Vallee <valleegr@ornl.gov>  Thu, 26 May 2011 09:11:29 -0400
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Sun, 30 Sep 2012 17:42:50 -0400
 
 oscar (6.1.0-1) lucid; urgency=low
 
