Update the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9509 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 095b616f083741c75cafc60230d0801417ab0f64

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 6.1.2 (not yet released):
 - Add the support for Scientific Linux 6.0.
+- Add the support for Ubuntu 12.04 (Precise).
+- Fix some formatting problems in man pages.
 
 6.1.1:
 - Update C3 to 5.1.2.
