Generate a set of new Debian packages to fix a reported problem (missing dependency).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9513 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 65564492db99dadf65e42bf6795332a529b296d3

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+oscar (6.1.2~svn20121219-0gv1) precise; urgency=low
+
+  * New upstream version.
+
+ -- Geoffroy Vallee <valleegr@ornl.gov>  Wed, 19 Dec 2012 13:13:24 -0500
+
 oscar (6.1.2~svn20120930-0gv1) precise; urgency=low
 
   * New upstream version.
