[openmpi-oscar] Update to 1.6.3 (Is SRPMS still required???)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9571 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: aa42f78f46fe9d8df5220557d8444adb7af7c02c

--- a/packages/openmpi/SRPMS/README
+++ b/packages/openmpi/SRPMS/README
@@ -1,7 +1,7 @@
 To rebuild the Open MPI SRPM, use the following argument:
 
 rpmbuild --rebuild --define "oscar 1" --define "_packager YOUR_NAME <YOUR_EMAIL>" \
-  --define "_vendor OSCAR" --define "configure_options --with-tm=/opt/pbs" \
-  openmpi-1.0.2-1.src.rpm
+  --define "_vendor OSCAR" --define "configure_options --with-tm=/opt/pbs --with-blcr" \
+  openmpi-1.6.3-1.src.rpm
 
 Remember to update the command with your name and email address.
