[oscar-utils] Created a new package to host scripts that needs to be on client nodes Need: distro-query is required by yume which can be run from client (cexec yume -y update) This avoids installing all oscar binaries that have nothing to do on client nodes. This change affects rpm based distros and debian based distros to keep concistency.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9672 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fe059afff6e5ae3938273413e1557646e68052a6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-oscar (6.1.2~svn20121219-0gv1) precise; urgency=low
+oscar (6.1.2~svn20130306-0ol1) precise; urgency=low
+
+  * Added the oscar-utils package so clients can have distro-query.
+
+ -- Olivier Lahaye <olivier.lahaye@cea.fr>  Wed, 06 Mar 2013 17:08:24 +0100
+
+ooscar (6.1.2~svn20121219-0gv1) precise; urgency=low
 
   * New upstream version.
 
