--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 - Add the support for Scientific Linux 6.0.
 - Add the support for Ubuntu 12.04 (Precise).
 - Fix some formatting problems in man pages.
+- Add GPU support in the database and torque configuration
+- Add blcr and munge support
+- Add oscar-release rpm for repository setup
+- Add oscar-utils to host scripts/binaries that needs to be installed on nodes
 
 6.1.1:
 - Update C3 to 5.1.2.
