[oscar:Changelog] Updated the changelog.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9951 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 181c50c293b27b16299f7c7e06b56644e43388fc

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 6.1.2 (not yet released):
 - Add the support for Scientific Linux 6.0.
+- Add the support for Fedora 17 and 18.
 - Add the support for Ubuntu 12.04 (Precise).
+- Add the support for Ubuntu 12.10 (Wheezy).
 - Fix some formatting problems in man pages.
 - Add GPU support in the database and torque configuration
 - Add blcr and munge support
