--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 6.1.2 (not yet released):
+- Update C3 to 5.1.3.
+- Update jobmonarch to 1.1
 - Add the support for Scientific Linux 6.0.
 - Add the support for Fedora 17 and 18.
 - Add the support for Ubuntu 12.04 (Precise).
